SonarQube corrected Code